traduction avice vers conseil

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="card">
       <div class="title">
-        Advice #
+        Conseil #
       </div>
       <div class="advice">
         Conseil s'affiche ici Conseil s'affiche ici Conseil s'affiche ici Conseil s'affiche ici Conseil s'affiche ici
