--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
   <div class="container">
     <div class="card">
-      <div class="title">
-        Conseil #
+      <div id="title">
+
       </div>
       <div id="advice">
       </div>
